--- a/index.html
+++ b/index.html
@@ -57,22 +57,33 @@
     .slide{position:relative;scroll-snap-align:start;display:grid;place-items:center;background:#fff}
     .slide img{width:100%;max-height:380px;object-fit:contain;display:block}
 
-    .hero-caption{
-      position:absolute;left:0;right:0;bottom:0;color:#fff;
-      padding:clamp(12px,3vw,24px) clamp(16px,4vw,32px);
-    }
-    .hero-caption::before{
-      content:"";position:absolute;inset:-20px 0 0 0;background:linear-gradient(180deg,rgba(0,0,0,0),rgba(0,0,0,.55) 70%,rgba(0,0,0,.7));backdrop-filter:blur(2px);z-index:-1
-    }
-    .carousel-arrow{
-      position:absolute;top:50%;transform:translateY(-50%);
-      width:46px;height:46px;border-radius:999px;border:none;
-      background:color-mix(in srgb, var(--brand-600) 92%, transparent);color:#fff;
-      display:grid;place-items:center;font-size:22px;cursor:pointer;box-shadow:0 2px 10px rgba(0,0,0,.25)
-    }
-    .carousel-arrow.left{left:12px}
-    .carousel-arrow.right{right:12px}
-    .carousel-arrow:focus-visible{outline:3px solid var(--accent-400)}
+.hero { position:relative; border-radius:16px; overflow:hidden; }
+.hero img { width:100%; height: clamp(220px, 42vw, 360px); object-fit:cover; object-position:center; display:block; }
+.hero .cta {
+  position:absolute; inset:auto 0 0 0;
+  padding: clamp(16px, 2.5vw, 24px);
+  color:#fff;
+  background: linear-gradient(180deg, transparent 0%, rgba(0,0,0,.55) 65%, rgba(0,0,0,.75) 100%);
+}
+.hero h1 { margin:.25rem 0 0; font-size: clamp(1.6rem, 3.2vw, 2.4rem); }
+.hero p  { margin:.25rem 0 0; color:#e9eefc; }
+.badge   { display:inline-block; background:#fff; color:#111; border-radius:999px; padding:.2rem .6rem; font-weight:600; }
+
+.carousel { position:relative; overflow:hidden; margin-top:1.25rem; border-radius:16px; }
+.carousel-track { display:grid; grid-auto-flow:column; grid-auto-columns:100%; scroll-snap-type:x mandatory; overflow-x:auto; scrollbar-width:none; }
+.carousel-track::-webkit-scrollbar{ display:none; }
+.slide { position:relative; scroll-snap-align:start; }
+.slide img { width:100%; height: clamp(220px, 42vw, 360px); object-fit:cover; object-position:center; display:block; }
+
+.carousel-arrow {
+  position:absolute; top:50%; transform:translateY(-50%); width:48px; height:48px;
+  border-radius:9999px; border:0; background: color-mix(in srgb, var(--brand-600) 90%, transparent);
+  color:#fff; font-size:22px; display:grid; place-items:center; cursor:pointer;
+  box-shadow: 0 2px 10px rgba(0,0,0,.25);
+}
+.carousel-arrow.left  { left: 12px; }
+.carousel-arrow.right { right: 12px; }
+
 
     /* Section titles */
     .section-title{text-align:center;margin:2.2rem 0 1rem;font-weight:800}
@@ -120,6 +131,35 @@
     .notice{padding:.6rem .8rem;border-radius:10px;border:1px solid var(--border);margin-top:.8rem}
     .notice.success{border-color:#b5e0b5;background:#ecf9ec;color:var(--success)}
     .notice.error{border-color:#f4b4b4;background:#fff1f1;color:var(--error)}
+/* Card */
+.card {
+  background: var(--surface-50);
+  border: 1px solid var(--surface-200);
+  border-radius: 16px;
+  box-shadow: 0 10px 30px rgba(0,0,0,.06);
+  padding: 20px;
+}
+
+/* Buttons */
+.btn {
+  appearance: none;
+  border: 0;
+  border-radius: 12px;
+  padding: .65rem 1rem;
+  font-weight: 600;
+  cursor: pointer;
+  transition: transform .08s ease, box-shadow .2s ease;
+}
+.btn:active { transform: translateY(1px); }
+
+.btn-primary{
+  background: var(--brand-600);
+  color: #fff;
+  box-shadow: 0 6px 16px rgba(37,99,235,.25);
+}
+.btn-primary:hover { background: var(--brand); }
+
+.form-actions { margin-top: .75rem; gap: .75rem; }
 
     footer{margin-top:2rem;padding:2rem 0;border-top:1px solid var(--border);color:var(--muted)}
   </style>
@@ -181,26 +221,47 @@
     </section>
 
     <!-- Spotlight (3 cards) -->
-    <section class="spotlight-section" aria-labelledby="spotlight-heading">
-      <h2 class="section-title" id="spotlight-heading">Spotlight</h2>
-      <div class="ql spotlight">
-        <a class="ql-card" href="https://portal.azure.com/#view/HubsExtension/BrowseResource/resourceType/Microsoft.Web%2FstaticSites" target="_blank" rel="noopener">
-          <span class="ql-icon ql-az" aria-hidden="true">AZ</span>
-          <span class="ql-title">Azure SWA</span>
-          <p class="ql-desc">Latest build &amp; deployment</p>
-        </a>
-        <a class="ql-card" href="https://github.com/your-org/hesaa-swa-poc/actions" target="_blank" rel="noopener">
-          <span class="ql-icon ql-gh" aria-hidden="true">GH</span>
-          <span class="ql-title">GitHub Actions</span>
-          <p class="ql-desc">CI/CD workflow runs</p>
-        </a>
-        <a class="ql-card" href="https://vkolugurihesaa.sharepoint.com/sites/HESAAWebRequestsPoC/Lists/Web%20Requests" target="_blank" rel="noopener">
-          <span class="ql-icon ql-sp" aria-hidden="true">SP</span>
-          <span class="ql-title">Requests List</span>
-          <p class="ql-desc">Create &amp; manage items</p>
-        </a>
-      </div>
-    </section>
+<h2 class="section-title">Spotlight</h2>
+
+<div class="ql spotlight" aria-label="Spotlight">
+  <!-- Azure SWA -->
+  <a class="ql-card" href="https://portal.azure.com/#view/HubsExtension/BrowseResource/resourceType/Microsoft.Web%2FstaticSites" target="_blank" rel="noopener">
+    <span class="ql-icon" aria-hidden="true" style="background:#0ea5e9">
+      <!-- Azure Logo -->
+      <svg width="28" height="28" viewBox="0 0 24 24" fill="white" aria-hidden="true">
+        <path d="M12.93 2L3 20h5.32L18.3 2h-5.37zm-1.86 5L5.38 20h5.38L16.62 7h-5.55z"/>
+      </svg>
+    </span>
+    <span class="ql-title">Azure SWA</span>
+    <p class="ql-desc">Latest build & deployment status.</p>
+  </a>
+
+  <!-- GitHub Actions -->
+  <a class="ql-card" href="https://github.com/your-org/hesaa-swa-poc/actions" target="_blank" rel="noopener">
+    <span class="ql-icon" aria-hidden="true" style="background:#24292e">
+      <!-- Octocat mark simplified -->
+      <svg width="28" height="28" viewBox="0 0 24 24" fill="white" aria-hidden="true">
+        <path d="M12 .5a12 12 0 00-3.79 23.4c.6.11.82-.26.82-.58v-2.03c-3.34.73-4.04-1.61-4.04-1.61-.55-1.39-1.34-1.76-1.34-1.76-1.09-.75.08-.74.08-.74 1.2.08 1.83 1.23 1.83 1.23 1.07 1.83 2.81 1.3 3.49.99.11-.78.42-1.3.76-1.6-2.66-.3-5.46-1.33-5.46-5.9 0-1.3.47-2.37 1.23-3.2-.13-.3-.53-1.52.12-3.16 0 0 1.01-.32 3.3 1.23a11.4 11.4 0 016 0c2.29-1.55 3.3-1.23 3.3-1.23.65 1.64.25 2.86.12 3.16.76.83 1.23 1.9 1.23 3.2 0 4.58-2.81 5.6-5.49 5.9.43.38.81 1.11.81 2.25v3.34c0 .32.21.7.83.58A12 12 0 0012 .5z"/>
+      </svg>
+    </span>
+    <span class="ql-title">GitHub Actions</span>
+    <p class="ql-desc">CI/CD workflow runs & logs.</p>
+  </a>
+
+  <!-- SharePoint List -->
+  <a class="ql-card" href="https://vkolugurihesaa.sharepoint.com/sites/HESAAWebRequestsPoC/Lists/Web%20Requests"
+     target="_blank" rel="noopener">
+    <span class="ql-icon" aria-hidden="true" style="background:#1372d8">
+      <!-- SharePoint-style S -->
+      <svg width="28" height="28" viewBox="0 0 24 24" fill="white" aria-hidden="true">
+        <path d="M15 3a6 6 0 10-3 11.3V22l3-1.8V3zM8.5 9c0-1 .7-1.5 2-1.9l1.3-.5c.4-.1.7-.3.7-.7 0-.6-.5-.9-1.3-.9-.8 0-1.5.3-2.1.9l-1.1-1A4 4 0 0111.3 2c2.2 0 3.6 1 3.6 2.7 0 1.2-.7 2-1.9 2.4l-1.2.4c-.6.2-.9.4-.9.8 0 .5.4.8 1.1.8.9 0 1.6-.3 2.2-1l1.1.9c-.8.9-1.9 1.4-3.3 1.4A3 3 0 018.5 9z"/>
+      </svg>
+    </span>
+    <span class="ql-title">Requests List</span>
+    <p class="ql-desc">Create & manage SharePoint items.</p>
+  </a>
+</div>
+
 
     <!-- Quick Links -->
     <h2 class="section-title" id="quicklinks">Quick links</h2>
@@ -289,7 +350,7 @@
               </div>
             </div>
             <div class="form-actions">
-              <button class="btn primary" type="submit">Submit</button>
+              <button class="btn btn-primary" type="submit">Submit</button>
               <span id="formMsg" role="status" aria-live="polite" class="kpi"></span>
             </div>
           </form>
