--- a/index.html
+++ b/index.html
@@ -138,65 +138,81 @@
 </section>
 
 
-    <!-- REQUEST FORM -->
-    <section class="my-4 card" aria-labelledby="create-title">
-      <h2 id="create-title" class="section-title">Create a Request</h2>
-      <form id="requestForm" novalidate>
-        <div class="form-row">
-          <div style="flex:1 1 320px">
-            <label for="RequestTitle">Request Title *</label>
-            <input id="RequestTitle" name="RequestTitle" type="text" required>
-          </div>
-          <div style="flex:0 0 220px">
-            <label for="RequestDate">Request Date *</label>
-            <input id="RequestDate" name="RequestDate" type="date" required>
-          </div>
-          <div style="flex:0 0 220px">
-            <label for="Priority">Priority *</label>
-            <select id="Priority" name="Priority" required>
-              <option value="">Select…</option>
-              <option>High</option>
-              <option>Medium</option>
-              <option>Low</option>
-            </select>
-          </div>
-        </div>
+    <!-- Spotlight + Quick links (keep if you already added them) -->
 
-        <div>
-          <label for="RequestDescription">Request Description *</label>
-          <textarea id="RequestDescription" name="RequestDescription" required></textarea>
-        </div>
+<!-- CREATE A REQUEST (API-backed, your field names) -->
+<section id="create" aria-labelledby="create-title" class="my-4 card" style="margin-top:1.5rem">
+  <h2 id="create-title" class="section-title">Create a Request</h2>
+  <form id="reqForm" novalidate>
+    <div>
+      <label for="fTitle">Title *</label>
+      <input id="fTitle" name="Title" type="text" required />
+    </div>
 
-        <div>
-          <label for="Attachment">Attachment (optional)</label>
-          <input id="Attachment" name="Attachment" type="file" />
-        </div>
+    <div>
+      <label for="fDesc">Description (Enhanced Rich Text supported)</label>
+      <textarea id="fDesc" name="RequestDescription" rows="5"
+        placeholder="You can paste formatted text from Word/Outlook"></textarea>
+    </div>
 
-        <div class="form-actions">
-          <button class="btn btn-primary" type="submit">Submit Request</button>
-        </div>
-      </form>
-    </section>
-
-    <!-- REQUESTS TABLE -->
-    <section class="my-4 card" aria-labelledby="requests-title">
-      <h2 id="requests-title" class="section-title">Requests</h2>
-      <div class="table-wrap">
-        <table id="requestsTable">
-          <thead>
-            <tr>
-              <th style="width:60px">ID</th>
-              <th>Title</th>
-              <th>Description</th>
-              <th style="width:130px">Date</th>
-              <th style="width:110px">Priority</th>
-              <th style="width:220px">Attachment</th>
-            </tr>
-          </thead>
-          <tbody><!-- filled by JS --></tbody>
-        </table>
+    <div class="form-row">
+      <div style="min-width:220px">
+        <label for="fType">Type *</label>
+        <select id="fType" name="RequestType" required>
+          <option value="">Select…</option>
+          <option>Bug</option><option>Enhancement</option>
+          <option>Inquiry</option><option>Maintenance Message</option>
+        </select>
       </div>
-    </section>
+      <div style="min-width:220px">
+        <label for="fPri">Priority *</label>
+        <select id="fPri" name="Priority" required>
+          <option value="">Select…</option>
+          <option>Low</option><option>Medium</option><option>High</option><option>Urgent</option>
+        </select>
+      </div>
+      <div style="display:flex;align-items:center;gap:.5rem">
+        <input id="fEnd" name="RequestEndDate" type="checkbox" />
+        <label for="fEnd">End Date?</label>
+      </div>
+    </div>
+
+    <div class="form-actions">
+      <button class="btn btn-primary" type="submit">Submit</button>
+      <span id="formMsg" role="status" aria-live="polite" class="kpi"></span>
+    </div>
+  </form>
+  <div id="alert" class="notice sr-only" aria-live="assertive"></div>
+</section>
+
+<!-- REQUESTS (API-backed) -->
+<section class="my-4 card" aria-labelledby="requests-title">
+  <h2 id="requests-title" class="section-title">Requests</h2>
+
+  <div class="form-row" style="justify-content:space-between;align-items:center">
+    <div class="kpi"><span id="resultCount">0</span> result(s)</div>
+    <!-- Page search box (header search also syncs to this) -->
+    <input id="search" type="search" placeholder="Filter requests…" style="max-width:320px">
+  </div>
+
+  <div class="table-wrap" style="margin-top:.5rem">
+    <table id="requestsTable">
+      <thead>
+        <tr>
+          <th>Title</th>
+          <th>Type</th>
+          <th>Priority</th>
+          <th>Date</th>
+          <th>End?</th>
+          <th>Created</th>
+          <th>Modified</th>
+          <th>Description</th>
+        </tr>
+      </thead>
+      <tbody id="rows"><tr><td colspan="8" class="kpi">Loading…</td></tr></tbody>
+    </table>
+  </div>
+</section>
   </main>
 
   <div data-include="/partials/footer.html"></div>
