--- a/index.html
+++ b/index.html
@@ -81,34 +81,58 @@
   </div>
 </section>
 <!-- Spotlight -->
-<section class="my-5">
+<section class="my-6">
   <h2 class="text-center mb-3">Spotlight</h2>
-  <div class="ql">
-    <a class="ql-card" href="https://portal.azure.com/#view/HubsExtension/BrowseResource/resourceType/microsoft.web%2Fstaticsites" target="_blank" rel="noopener">
-      <span class="ql-icon" style="background:#0ea5e9">A</span>
-      <div>
-        <strong>Azure SWA</strong>
-        <div class="kpi">Latest build & deployment status.</div>
-      </div>
-    </a>
 
-    <a class="ql-card" href="https://github.com/" target="_blank" rel="noopener">
-      <span class="ql-icon" style="background:#111827"></span>
-      <div>
-        <strong>GitHub Actions</strong>
-        <div class="kpi">CI/CD workflow runs & logs.</div>
-      </div>
-    </a>
+  <div class="spot-grid">
+<!-- Azure SWA -->
+<a class="spot-card" href="https://portal.azure.com/" target="_blank" rel="noopener"
+   aria-label="Azure Static Web Apps — latest build & deployment status">
+  <span class="spot-badge spot-azure">
+    <!-- Azure‑style “A” blade (inline SVG) -->
+    <svg class="spot-ico" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+      <path d="M3 19l7.6-15h2.8L21 19h-3l-2.3-4.7h-6.5L7 19H3zm10.8-7.8L12 6.1 10.2 11.2h3.6z" />
+    </svg>
+  </span>
+  <div class="spot-body">
+    <strong>Azure SWA</strong>
+    <p class="kpi">Latest build &amp; deployment status.</p>
+  </div>
+</a>
 
-    <a class="ql-card" href="/students.html">
-      <span class="ql-icon" style="background:#2563eb">e</span>
-      <div>
-        <strong>Requests List</strong>
-        <div class="kpi">Create & manage SharePoint items.</div>
-      </div>
-    </a>
+<!-- GitHub Actions -->
+<a class="spot-card" href="https://github.com/" target="_blank" rel="noopener"
+   aria-label="GitHub Actions — CI/CD workflow runs and logs">
+  <span class="spot-badge spot-github">
+    <!-- Simplified Octocat mark (inline SVG) -->
+    <svg class="spot-ico" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+      <path d="M12 2C6.5 2 2 6.6 2 12.2c0 4.5 2.9 8.3 6.9 9.6.5.1.7-.2.7-.5v-2c-2.8.6-3.4-1.2-3.4-1.2-.4-1-1-1.3-1-1.3-.8-.6.1-.6.1-.6.9.1 1.4 1 1.4 1 .8 1.4 2.2 1 2.7.8.1-.6.3-1 .6-1.3-2.2-.2-4.6-1.1-4.6-4.9 0-1.1.4-2 1-2.7-.1-.3-.4-1.3.1-2.7 0 0 .8-.3 2.8 1 .8-.2 1.7-.3 2.6-.3s1.8.1 2.6.3c2-1.3 2.8-1 2.8-1 .5 1.4.2 2.4.1 2.7.7.7 1 1.6 1 2.7 0 3.8-2.4 4.7-4.6 4.9.3.3.6.9.6 1.8v2.7c0 .3.2.6.7.5 4-1.3 6.9-5.1 6.9-9.6C22 6.6 17.5 2 12 2z"/>
+    </svg>
+  </span>
+  <div class="spot-body">
+    <strong>GitHub Actions</strong>
+    <p class="kpi">CI/CD workflow runs &amp; logs.</p>
+  </div>
+</a>
+
+<!-- SharePoint -->
+<a class="spot-card" href="https://yoursharepointsite" target="_blank" rel="noopener"
+   aria-label="Requests List — create and manage SharePoint items">
+  <span class="spot-badge spot-sp">
+    <!-- SharePoint‑style node/S (inline SVG) -->
+    <svg class="spot-ico" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+      <path d="M14.5 4a4.5 4.5 0 110 9H13v3.5A3.5 3.5 0 119.5 17H7a3 3 0 110-6h2.5A4.5 4.5 0 0114.5 4zM9.8 11.5c.8 0 1.5-.5 1.5-1.3S10.6 9 9.7 9H8.7c-.5 0-.8-.3-.8-.7s.3-.7 1-.7h2c.3 0 .6.2.8.4l.9-.9c-.5-.5-1.1-.8-1.9-.8H8.8C7.6 6.3 6.7 7.1 6.7 8s.7 1.6 1.7 1.9c-.9.3-1.5.9-1.5 1.8 0 1.1 1 1.9 2.3 1.9h1.9c.8 0 1.5-.3 2-.9l-1-.9c-.2.2-.5.4-.9.4H9.8z"/>
+    </svg>
+  </span>
+  <div class="spot-body">
+    <strong>Requests List</strong>
+    <p class="kpi">Create &amp; manage SharePoint items.</p>
+  </div>
+</a>
+
   </div>
 </section>
+
 
 <!-- Quick links -->
 <section class="my-5">
@@ -175,6 +199,10 @@
         <input id="fEnd" name="RequestEndDate" type="checkbox" />
         <label for="fEnd">End Date?</label>
       </div>
+      <div style="min-width:260px; margin-left:auto">
+    <label for="fFile">Attachment</label>
+    <input id="fFile" name="Attachment" type="file" />
+  </div>
     </div>
 
     <div class="form-actions">
@@ -197,18 +225,19 @@
 
   <div class="table-wrap" style="margin-top:.5rem">
     <table id="requestsTable">
-      <thead>
-        <tr>
-          <th>Title</th>
-          <th>Type</th>
-          <th>Priority</th>
-          <th>Date</th>
-          <th>End?</th>
-          <th>Created</th>
-          <th>Modified</th>
-          <th>Description</th>
-        </tr>
-      </thead>
+    <thead>
+      <tr>
+        <th>Title</th>
+        <th>Type</th>
+        <th>Priority</th>
+        <th>Date</th>
+        <th>End?</th>
+        <th>Created</th>
+        <th>Modified</th>
+        <th>Attachments</th>  <!-- ← add this -->
+        <th>Description</th>
+      </tr>
+    </thead>
       <tbody id="rows"><tr><td colspan="8" class="kpi">Loading…</td></tr></tbody>
     </table>
   </div>
