--- a/index.html
+++ b/index.html
@@ -1,28 +1,25 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>HESAA — Home</title>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>HESAA — Home</title>
 
-  <!-- Keep Bootstrap if you still need legacy styles/scripts -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <!-- Favicon -->
+    <link rel="icon" href="/assets/HESAAFAVICON.ico" />
 
-  <!-- Your existing global css (if needed) -->
-  <link rel="stylesheet" href="/assets/layout.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
+    <!-- Tailwind (compiled) -->
+    <link rel="stylesheet" href="/assets/app/hesaa-homepage.css" />
 
-  <!-- The compiled Tailwind+app css that Vite emits -->
-  <link rel="stylesheet" href="/assets/app/hesaa-homepage.css">
-</head>
-<body class="bg-white text-gray-800">
-  <!-- React app mounts here -->
-  <div id="root"></div>
-
-  <!-- Optional: Bootstrap bundle if you still use it anywhere -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
-  <!-- The compiled IIFE React bundle that Vite emits -->
-  <script defer src="/assets/app/hesaa-homepage.iife.js"></script>
-</body>
+    <!-- Remove the Google top banner bar when translating -->
+    <style>
+      .goog-te-banner-frame{display:none!important}
+      body{top:0!important}
+    </style>
+  </head>
+  <body class="bg-white">
+    <div id="root"></div>
+    <!-- React bundle built by Vite -->
+    <script src="/assets/app/hesaa-homepage.iife.js"></script>
+  </body>
 </html>
