--- a/index.html
+++ b/index.html
@@ -1,52 +1,34 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>HESAA — Home</title>
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, viewport-fit=cover"
+    />
+    <title>Home | New Jersey Student Financial Aid | HESAA</title>
 
-  <!-- Favicon -->
-  <link rel="icon" href="/assets/HESAAFAVICON.ico" sizes="any" />
-  <link rel="apple-touch-icon" href="/assets/HESAALogo.png" />
+    <!-- Favicon + PWA-ish bits -->
+    <link rel="icon" href="/assets/HESAAFAVICON.ico" sizes="any" />
+    <link rel="apple-touch-icon" href="/assets/HESAALogo.png" />
+    <meta name="theme-color" content="#0a2c5f" />
 
-  <!-- Tailwind (compiled) -->
-  <link rel="stylesheet" href="/assets/app/hesaa-homepage.css" />
+    <!-- Compiled Tailwind CSS -->
+    <link rel="stylesheet" href="/assets/app/hesaa-homepage.css" />
+  </head>
+  <body class="antialiased bg-white text-slate-900">
+    <!-- Vite/React mount -->
+    <div id="root"></div>
 
-  <!-- (Optional) your legacy page css still used by non-SPA pages -->
-  <link rel="stylesheet" href="/assets/layout.css" />
+    <!-- SPA IIFE bundle (built by Vite) -->
+    <script src="/assets/app/hesaa-homepage.iife.js" defer></script>
 
-  <!-- Google fonts (nice headings) -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=DM+Serif+Display:ital@0;1&display=swap" rel="stylesheet" />
-
-  <!-- SPA bundle (IIFE built by Vite) -->
-  <script defer src="/assets/app/hesaa-homepage.iife.js"></script>
-
-  <!-- Keep these if other static pages need them -->
-  <script src="/assets/include.js" defer></script>
-  <script src="/assets/site.js" defer></script>
-
-  <style>
-    /* Small helpers so the top bar/menus feel crisp on full width */
-    :root{
-      --brand:#0a3d91;        /* brand primary */
-      --brand-2:#0f62fe;      /* action blue */
-      --ink:#0b1220;          /* dark text */
-      --muted:#5b6472;        /* secondary text */
-      --bg:#ffffff;           /* page */
-      --soft:#f4f7fb;         /* soft surface */
-      --card:#ffffff;         /* card */
-    }
-    body{font-family:Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif}
-    .font-display{font-family:"DM Serif Display", Georgia, serif}
-  </style>
-</head>
-<body class="bg-[var(--bg)] text-[var(--ink)]">
-  <!-- SPA will render here -->
-  <div id="root"></div>
-
-  <!-- Optional: keep footer include for other pages that still use partials -->
-  <div data-include="/partials/footer.html" class="hidden"></div>
-</body>
+    <!-- Google Translate loader (callback is created by Header.tsx) -->
+    <script
+      id="gt-script"
+      src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"
+      async
+      defer
+    ></script>
+  </body>
 </html>
